--- a/Task03.ipynb
+++ b/Task03.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOwcwdkIXOiHZWpVupAxDCP",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -27,81 +11,158 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "ESM_Y4FM5aZ3"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# Arithmetic Operators\n",
-        "print(\"Arithmetic Operators:\")\n",
-        "num1 = int(input(\"Enter the first number: \"))\n",
-        "num2 = int(input(\"Enter the second number: \"))\n",
-        "print(\"Addition:\", num1 + num2)\n",
-        "print(\"Subtraction:\", num1 - num2)\n",
         "\n",
-        "# Assignment Operators\n",
-        "print(\"\\nAssignment Operators:\")\n",
-        "X=int(input(\"Enter the value\"))\n",
-        "x *= 3\n",
-        "print(\"x *= 3:\", x)\n",
-        "x /= 27\n",
-        "print(\"x ÷= 2:\", x)\n",
-        "\n",
-        "# Comparison Operators\n",
-        "print(\"\\nComparison Operators:\")\n",
-        "print(\"Not Equal:\", 5 != 3)\n",
-        "print(\"Greater Than:\", 5 > 3)\n",
-        "\n",
-        "# Logical Operators\n",
-        "print(\"\\nLogical Operators with User Input:\")\n",
-        "age = int(input(\"Enter your age: \"))\n",
-        "print(\"\\nLogical Operators:\")\n",
-        "print(\"AND:\", True and True)\n",
-        "print(\"OR:\", True or False)\n",
-        "print(\"NOT:\", not True)"
+        "#while loop\n",
+        "X=1\n",
+        "Y=10\n",
+        "while X<=Y:\n",
+        "    print(X)\n",
+        "    X+=1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "DEEXN8S86Ln9",
-        "outputId": "b36d3b5c-eb01-475b-d1b0-cf5e8c1ca9f2"
+        "id": "PWEqLbr37MFc",
+        "outputId": "b116a018-84f3-4014-be0f-32c2ce5667a4"
       },
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Arithmetic Operators:\n",
-            "Enter the first number: 10\n",
-            "Enter the second number: 8\n",
-            "Addition: 18\n",
-            "Subtraction: 2\n",
-            "\n",
-            "Assignment Operators:\n",
-            "Enter the value20\n",
-            "x *= 3: 0.002286236854138089\n",
-            "x ÷= 2: 8.467543904215144e-05\n",
-            "\n",
-            "Comparison Operators:\n",
-            "Not Equal: True\n",
-            "Greater Than: True\n",
-            "\n",
-            "Logical Operators with User Input:\n",
-            "Enter your age: 22\n",
-            "\n",
-            "Logical Operators:\n",
-            "AND: True\n",
-            "OR: True\n",
-            "NOT: False\n"
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#break\n",
+        "X=1\n",
+        "while X<=10:\n",
+        "    break;\n",
+        "    print(X)"
+      ],
+      "metadata": {
+        "id": "BhTxvCh--OhX"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#continue\n",
+        "X=10\n",
+        "Y=20\n",
+        "for i in range(X,Y):\n",
+        "  if i==15:\n",
+        "    continue\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "KPugRLd9_VD3",
+        "outputId": "95a36284-7ab4-4e73-e7e8-8e9451620f60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ESM_Y4FM5aZ3"
+      },
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3JKOKvadAWNX",
+        "outputId": "2755472d-adce-4b7a-ba9e-77bce44949e5"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter the starting number: 1\n",
+            "Enter the ending number: 11\n",
+            "Numbers from 1 to 11 :\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n"
+          ]
+        }
+      ],
+      "source": [
+        "# for loop\n",
+        "start = int(input(\"Enter the starting number: \"))\n",
+        "end = int(input(\"Enter the ending number: \"))\n",
+        "print(\"Numbers from\", start, \"to\", end, \":\")\n",
+        "for i in range(start, end + 1):\n",
+        "    print(i)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyPzWMKngw/VL5ydRBHObDD/",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
