--- a/Task13.ipynb
+++ b/Task13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7KCuKyQ2fHE90LtClTSOf",
+      "authorship_tag": "ABX9TyOvABJT4fBs7EtuWfF/S1yW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,62 +29,64 @@
     {
       "cell_type": "code",
       "source": [
-        "class AadhaarForm:\n",
-        "    def __init__(self):\n",
-        "        self.name = \"\"\n",
-        "        self.dob = \"\"\n",
-        "        self.address = \"\"\n",
-        "        self.mobile = \"\"\n",
-        "        self.email = \"\"\n",
+        "# Import necessary libraries\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
         "\n",
-        "    def fill_form(self):\n",
-        "        self.name = input(\"Enter your name: \")\n",
-        "        self.dob = input(\"Enter your date of birth (DD/MM/YYYY): \")\n",
-        "        self.address = input(\"Enter your address: \")\n",
-        "        self.mobile = input(\"Enter your mobile number: \")\n",
-        "        self.email = input(\"Enter your email: \")\n",
+        "# Load the iris dataset\n",
+        "iris = load_iris()\n",
+        "X = iris.data\n",
+        "y = iris.target\n",
         "\n",
-        "    def display_form(self):\n",
-        "        print(\"\\nAadhaar Enrollment Form:\")\n",
-        "        print(f\"Name: {self.name}\")\n",
-        "        print(f\"Date of Birth: {self.dob}\")\n",
-        "        print(f\"Address: {self.address}\")\n",
-        "        print(f\"Mobile Number: {self.mobile}\")\n",
-        "        print(f\"Email: {self.email}\")\n",
+        "# Split the data into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "def main():\n",
-        "    form = AadhaarForm()\n",
-        "    form.fill_form()\n",
-        "    form.display_form()\n",
+        "# Create and train a logistic regression model\n",
+        "model = LogisticRegression(max_iter=1000)\n",
+        "model.fit(X_train, y_train)\n",
         "\n",
-        "if __name__ == \"__main__\":\n",
-        "    main()"
+        "# Make predictions on the test set\n",
+        "y_pred = model.predict(X_test)\n",
+        "\n",
+        "# Evaluate the model\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "print(\"Accuracy:\", accuracy)\n",
+        "print(\"Classification Report:\")\n",
+        "print(classification_report(y_test, y_pred))\n",
+        "print(\"Confusion Matrix:\")\n",
+        "print(confusion_matrix(y_test, y_pred))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "JaxtzkEZJ4Is",
-        "outputId": "32b51cd9-c51e-45e1-f17c-c00fea83b197"
+        "id": "DQUL13MGLLdw",
+        "outputId": "09ed2964-6d3f-4610-c0dd-20d6e92e18e6"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your name: Nagaraj D \n",
-            "Enter your date of birth (DD/MM/YYYY): 07/09/2004\n",
-            "Enter your address: Ariger anna nagar \n",
-            "Enter your mobile number: 0000000000\n",
-            "Enter your email: Example @gmail.com\n",
+            "Accuracy: 1.0\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
             "\n",
-            "Aadhaar Enrollment Form:\n",
-            "Name: Nagaraj D \n",
-            "Date of Birth: 07/09/2004\n",
-            "Address: Ariger anna nagar \n",
-            "Mobile Number: 0000000000\n",
-            "Email: Example @gmail.com\n"
+            "           0       1.00      1.00      1.00        10\n",
+            "           1       1.00      1.00      1.00         9\n",
+            "           2       1.00      1.00      1.00        11\n",
+            "\n",
+            "    accuracy                           1.00        30\n",
+            "   macro avg       1.00      1.00      1.00        30\n",
+            "weighted avg       1.00      1.00      1.00        30\n",
+            "\n",
+            "Confusion Matrix:\n",
+            "[[10  0  0]\n",
+            " [ 0  9  0]\n",
+            " [ 0  0 11]]\n"
           ]
         }
       ]
